  variable is discrete but not binary
- Fix some bugs and inconsistencies in relation to the Ljung-Box
  statistic and ACFs
- Add the CUSUMSQ test alongside CUSUM
- Add test version of Arellano-Bond dynamic panel data estimation
- Fix bug in GUI spreadsheet in relation to adding variables
- Fix bug in restricting the sample in the GUI, for the case
  where's there's already a restriction in place

9/13/2006 version 1.6.0
- Revamp mechanism for saving sessions in gui program (we
  now save sessions as zipfiles containing XML representations
  of any models that have been estimated)
- Add "native" exact ML estimation of ARMA models using the
  Kalman filter
- Saving data in native gretl format: make gzip compression the
  default
- Add some basic functionality for analysis of discrete variables. 
  New behavior of frequency distribution, plus new commands: 
  "discrete" (interpret variables as discrete), "dummify" (create a 
  set of dummies coding for the values of a discrete variable), and 
  "xtab" (cross-tabulation of two discrete variables)
- Don't add an extra newline at the end of plain text data files
  (e.g. CSV)
- "restrict" command for single equations: add a printout of the
   restricted coefficient estimates and standard errors
- Add mechanism for packaging user-defined functions so as to
  make these available for other users; also add a mechanism
  for downloading such packages from a server, and for uploading
  new packages to the server
- Redefine the weight variable in gretl's "wls" command, for
  better compatibility with other programs: the weight var is
  now defined as the series of diagonal elements of the weighting 
  matrix, so existing gretl scripts that use wls should square
  the old weight variable
- Don't print the "model has no constant" message, and do not
  use special methods to calculate R^2 and F, if the set of
  regressors spans the space of a constant
- Indexing of coefficients in "restrict" command: standardize on