@@ -95,7 +95,7 @@ int add_obs_dialog (const char *blurb, int addmin);
 int forecast_dialog (int t1min, int t1max, int *t1, 
 		     int t2min, int t2max, int *t2,
 		     int pmin, int pmax, int *p,
-		     int dyn);
+		     int dyn, int model_ci);
 
 void compute_default_ts_info (DATAINFO *dwinfo, int newdata);
 
