@@ -24,6 +24,8 @@ version 1.6.1, in progress
 - Fix bug in GUI spreadsheet in relation to adding variables
 - Fix bug in restricting the sample in the GUI, for the case
   where's there's already a restriction in place
+- QLR test: add time-series graph of F test
+- new command "xcorrgm" for cross-correlogram of 2 variables
 
 9/13/2006 version 1.6.0
 - Revamp mechanism for saving sessions in gui program (we
